# met-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Design.md  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: FindNetCDF.cmake  FindecCodes.cmake  Packaging.cmake  Sanitizers.cmake  Warnings.cmake
cmake/vcpkg-overlay-ports/: README.md
cmake/vcpkg-overlay-ports/dbus/: vcpkg.json
cmake/vcpkg-triplets/: x64-linux-dynamic.cmake  x64-windows.cmake
docs/: getting-started.md
resources/: met-viewer.qrc
resources/icons/png/: README.txt
resources/linux/: met-viewer.desktop
resources/win/: met-viewer.rc
tests/: CMakeLists.txt  test_main.cpp  test_main_app.cpp
tests/analysis/: analysis_tools_test.cpp  derived_test.cpp  sample_test.cpp  wind_test.cpp
tests/app/: fieldcache_test.cpp  hoverreadout_test.cpp  skewtview_test.cpp  timecontroller_test.cpp
tests/core/: catalog_test.cpp  grid_test.cpp  projected_grid_test.cpp  smoke_test.cpp  timeaxis_test.cpp  units_test.cpp
tests/fixtures/: era5_t_pl.nc  height_levels.nc  lambert_sfc.grib2  regular_ll_missing.grib2  regular_ll_t500.grib1  regular_ll_t500.grib2  small_latlon.arl  wind_uv_850.grib2
tests/readers/: arl_test.cpp  grib1_test.cpp  grib_reader_test.cpp  lambert_test.cpp  multidataset_test.cpp  netcdf_reader_test.cpp
tests/render/: colormap_test.cpp  contour_test.cpp  tilemath_test.cpp  warp_test.cpp
tools/: frames_to_gif.py  gen_app_icons.py  gen_colormaps.py  gen_glyph_placeholders.py  gen_screenshots.sh  make_arl_fixture.py  make_fixtures.sh  make_grib_fixture.c  make_grib_missing_fixture.c  make_lambert_fixture.c  make_netcdf_fixture.c  make_netcdf_levels_fixture.c  make_wind_fixture.c  ne_convert.py
viewer/analysis/: CMakeLists.txt  analysis.cpp  analysis.h  crosssection.cpp  crosssection.h  derived.cpp  derived.h  sample.cpp  sample.h  sounding.cpp  sounding.h  timeseries.cpp  timeseries.h  wind.cpp  wind.h
viewer/app/: CMakeLists.txt  coastlines.cpp  coastlines.h  colorbarwidget.cpp  colorbarwidget.h  controlpanel.cpp  controlpanel.h  crosssectionview.cpp  crosssectionview.h  datasetdock.cpp  datasetdock.h  fieldcache.cpp  fieldcache.h  glfieldrenderer.cpp  glfieldrenderer.h  hoverreadout.cpp  hoverreadout.h  icons.cpp  icons.h  jobs.cpp  jobs.h  main.cpp  mainwindow.cpp  mainwindow.h  mapview.cpp  mapview.h  plotview2d.cpp  plotview2d.h  skewtview.cpp  skewtview.h  theme.cpp  theme.h  tilelayer.cpp  tilelayer.h  timecontroller.cpp  timecontroller.h  timeseriesview.cpp  timeseriesview.h
viewer/core/: CMakeLists.txt  catalog.cpp  catalog.h  core.cpp  core.h  crs.cpp  crs.h  field.h  geo.h  grid.cpp  grid.h  timeaxis.cpp  timeaxis.h  units.cpp  units.h
viewer/readers/: CMakeLists.txt  detect.cpp  detect.h  ireader.h  multidataset.cpp  multidataset.h  readers.cpp  readers.h
viewer/readers/arl/: arldataset.cpp  arldataset.h  arlreader.cpp  arlreader.h
viewer/readers/grib/: gribdataset.cpp  gribdataset.h  gribreader.cpp  gribreader.h
viewer/readers/netcdf/: cfdataset.cpp  cfdataset.h  cfreader.cpp  cfreader.h
viewer/render/: CMakeLists.txt  colormap.cpp  colormap.h  colormaps_data.h  contour.cpp  contour.h  fieldimage.cpp  fieldimage.h  render.cpp  render.h  tilemath.h  warp.cpp  warp.h  windbarb.cpp  windbarb.h
